# Jormungandr

./: .gitignore  .rosinstall  .travis.yml  CMakeLists.txt  QualParams  README.md  get_started.sh  hsvConfig  install_dependencies.sh  requirements.txt
external_pkg/: .rosinstall  (+1 more)
src/controller/: .ControllerNode.cpp.swp  .controller_node.cpp.swp  .controller_node.cpp~.swp  CMakeLists.txt  ControllerNode.cpp  ControllerNode.cpp_  ControllerNode.cpp~  controller_node.cpp  package.xml
src/controller/include/: Controller.h  ControllerNode.h  MyNode.h
src/controller/launch/: controller_node.launch
src/controller/src/: Controller.cpp  ControllerNode.cpp  controller_node.cpp
src/controls/: CMakeLists.txt  controller_plugins.xml  package.xml
src/controls/config/: controllers.yaml
src/controls/include/: DataStructs.h  ThrusterArrayCommand.h
src/controls/include/controllers/: depth_state_controller.h  multi_thruster_controller.h  thruster_array_controller.h
src/controls/include/interface/: depth_state_interface.h  robot_hardware_interface.h  thruster_array_interface.h  thruster_command_interface.h
src/controls/include/simulink/: control_system.h  controller.cpp  controller.h  cosd_REZfihlV.cpp  cosd_REZfihlV.h  frame_conversion.h  invNxN_YgskRBgH.h  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rt_powd_snf.cpp  rt_powd_snf.h  rt_remd_snf.cpp  rt_remd_snf.h  rt_roundd_snf.cpp  rt_roundd_snf.h  rtwtypes.h  sind_X3pRZNku.h  svd_eAADSaaD.h  thrust_allocation.h  trajectory_planner.cpp  trajectory_planner.h  xaxpy_7155JtSF.cpp  xaxpy_7155JtSF.h  xaxpy_cpmPaViz.cpp  xaxpy_cpmPaViz.h  xaxpy_irZdM5XF.h  xdotc_7IquZDOK.cpp  xdotc_7IquZDOK.h  xnrm2_UbyzGcEw.h  xnrm2_qZ7KPglN.h  xrot_XJMNyuag.cpp  xrot_XJMNyuag.h  xrotg_IPICesPU.h  xscal_myTCeGM2.h  xswap_cwXDe7Ur.cpp  xswap_cwXDe7Ur.h
src/controls/include/types/: data_types.h
src/controls/launch/: controls.launch
src/controls/msg/: ArduinoDriversMsg.msg  DepthSensorMsg.msg  DepthSensorState.msg  DriversMsg.msg  ImuSensorMsg.msg  MultiThrusterCommand.msg  MultiThrusterMsg.msg  ThrusterArrayMsg.msg
src/controls/src/: control_node.cpp
src/controls/test/: depth_state_controller_test.cpp  multi_thruster_controller_test.cpp  thruster_array_controller_test.cpp
src/decision/: CMakeLists.txt  package.xml
src/decision/constants/: constants.yaml
src/decision/include/: DeadMansSwitchNode.h  DecisionNode.h  OdomToTwistStamped.h  decisionNode.h
src/decision/launch/: dead_mans_switch.launch  decision.launch  decision_node.launch  simulator_decision_node.launch
src/decision/src/: DeadMansSwitchNode.cpp  DecisionNode.cpp  dead_mans_switch_node.cpp  decisionNode.cpp  decision_node.cpp
src/decision/test/: dead_mans_switch_rostest.cpp  decision_node_rostest.cpp  decision_node_test.test
src/drivers/: CMakeLists.txt  package.xml
src/drivers/firmware/: CMakeLists.txt
src/drivers/launch/: arduino_drivers.launch  imu.launch
src/drivers/msg/: ArduinoDrivers.msg  DepthSensor.msg
src/gate_detect/: CMakeLists.txt  README.md  package.xml
src/gate_detect/cfg/: gatedetect.cfg
src/gate_detect/include/: Gate.h  GateDetectNode.h  GateDetection.h  GateDetectionNode.h  GateDetector.h  GateDetectorNode.h  Interpolator.h  Pole.h  PoleDetection.h  gate_detect.h
src/gate_detect/launch/: gate_detect.launch  gate_detect_full.launch  tyler_test.launch  video_test.launch
src/gate_detect/msg/: GateDetectMsg.msg  gateDetect.msg  gateDetectMsg.msg
src/gate_detect/src/: Gate.cpp  GateDetectNode.cpp  GateDetection.cpp  GateDetectionNode.cpp  GateDetector.cpp  GateDetectorNode.cpp  Interpolator.cpp  Pole.cpp  PoleDetection.cpp  gateDetect.cpp  gate_detect.cpp  gate_detect_node.cpp  output
src/gate_detect/test/: TestUtils.h  Testutils.cpp  gate-detect-test.cpp  gate-detection-msg-test.cpp  gate-detection-test.cpp  gateDetectTest.cpp  orangeFilterValues.yaml
src/line_detect/: CMakeLists.txt  README.md  package.xml
src/line_detect/include/: #LineDetector.h#  LineDetector.h  LineDetectorNode.h
src/line_detect/launch/: line_detect.launch  line_detect2.launch
src/line_detect/msg/: LineDetectMsg.msg
src/line_detect/src/: LineDetector.cpp  LineDetectorNode.cpp  line_detect_node.cpp
src/line_detect/test/: line-detection-gtest.cpp  line-detection-msg-test.cpp
src/tensorflow_object_detector/: CMakeLists.txt  README.md  package.xml
src/tensorflow_object_detector/launch/: simulator_detector.launch  usb_cam_detector.launch
src/tensorflow_object_detector/scripts/: detect_ros.py
src/vision/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/vision/PythonScripts/: testYAM.yaml  yamlEditor.py
src/vision/cfg/: .pythonEditor.py.swp  .yamlEditor.py.swp  Tutorials.cfg  hsv-filter-node.cfg  hsv.cfg  hsvfilter.cfg  hsvfilter.yml  hsvfilterConfig.cfg  launchOUT.yaml  launch_params_out.yaml  parameters.yaml  rqt_params_out.yaml  yamlEditor.py
src/vision/include/: Accumulator.h  HSVFilter.h  HSVFilterNode.h  accumulator.h
src/vision/launch/: gate_detect_filter.launch  hsv_filter_node.launch  simulator_gate_detect_filter.launch
src/vision/src/: #HSVFilter.cpp#  Accumulator.cpp  AccumulatorNode.cpp  Accumulator_node.cpp  Accumulator_node.h  HSVFilter.cpp  HSVFilterNode.cpp  accumulator.cpp  hsv_filter_node.cpp
src/vision/test/: ImageTestUtils.cpp  ImageTestUtils.h  hsv-filter-test.cpp  hsv_filter_rostest.cpp  hsv_filter_test.test
src/worldstate/: CMakeLists.txt  README.md  package.xml
src/worldstate/include/: WorldStateNode.h
src/worldstate/launch/: worldstate_node.launch
src/worldstate/msg/: StateMsg.msg  state_msg.msg  states.msg
src/worldstate/routine/: Readme
src/worldstate/src/: WorldStateNode.cpp  world_state_node.cpp
src/worldstate/test/: world_state_msg_test.cpp  world_state_node_rostest.cpp  world_state_node_test.cpp.cpp  world_state_node_test.test  world_state_rostest.cpp
src/yolo_detector/: CMakeLists.txt  package.xml
src/yolo_detector/include/: YoloDetectorNode.h
src/yolo_detector/msg/: YoloOutArray.msg
src/yolo_detector/src/: YoloDetectorNode.cpp  yolo_detector_node.cpp
(+382 files in other folders)
